# gl_types

./: Cargo.toml
multi-impl/tests/: test.rs
src/: lib.rs
src/functions/: angle_trig.rs  clip_space.rs  geometric.rs  matrix.rs  mod.rs  transform.rs
src/matrices/: mat2.rs  mat3.rs  mat4.rs  mod.rs
src/vectors/: mod.rs  vec2.rs  vec3.rs  vec4.rs  vecn.rs
src/vectors/vecn/: mod.rs  vec2.rs  vec3.rs  vec4.rs
swizz/src/: lib.rs
swizz/tests/: test.rs
tests/: integration_tests.rs
